# Selune

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  QA_REPORT_PHASE2.md  README.md
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.sh  run_jit_benchmarks.sh
benchmarks/scripts/: README.md  ackermann.lua  arithmetic.lua  binary_trees.lua  closures.lua  coroutines.lua  fibonacci.lua  gc_pressure.lua  jit_backedge.lua  jit_float_arith.lua  jit_float_forloop.lua  jit_generic_for.lua  jit_heavy_arith.lua  jit_math_builtins.lua  jit_osr.lua  jit_sum_loop.lua  jit_table_ops.lua  mandelbrot.lua  method_calls.lua  nbody.lua  particle_sim.lua  raytracer.lua  spectral_norm.lua  string_concat.lua  string_format.lua  string_match.lua  table_array.lua  table_hash.lua  table_object.lua
crates/selune/: Cargo.toml
crates/selune-compiler/: Cargo.toml
crates/selune-compiler/benches/: compiler_bench.rs  lexer_bench.rs
crates/selune-compiler/src/: disasm.rs  lexer.rs  lib.rs  opcode.rs  proto.rs  token.rs
crates/selune-compiler/src/compiler/: expr.rs  mod.rs  scope.rs
crates/selune-compiler/tests/: e2e.rs
crates/selune-compiler/tests/e2e/: helpers.rs  test_errors.rs  test_expressions.rs  test_functions.rs  test_lua_samples.rs  test_programs.rs  test_statements.rs
crates/selune-core/: Cargo.toml
crates/selune-core/benches/: value_bench.rs
crates/selune-core/src/: gc.rs  lib.rs  object.rs  string.rs  table.rs  value.rs
crates/selune-ffi/: Cargo.toml
crates/selune-ffi/src/: lib.rs
crates/selune-jit/: Cargo.toml
crates/selune-jit/src/: abi.rs  compiler.rs  lib.rs  runtime.rs
crates/selune-stdlib/: Cargo.toml
crates/selune-stdlib/src/: coroutine_lib.rs  debug_lib.rs  io_lib.rs  lib.rs  math.rs  os_lib.rs  package_lib.rs  pattern.rs  string_lib.rs  table_lib.rs  utf8_lib.rs
crates/selune-vm/: Cargo.toml
crates/selune-vm/src/: arith.rs  binary_chunk.rs  callinfo.rs  coerce.rs  compare.rs  dispatch.rs  error.rs  lib.rs  metamethod.rs  vm.rs
crates/selune-vm/tests/: debug_disasm.rs  e2e.rs
crates/selune-vm/tests/e2e/: helpers.rs  test_arithmetic.rs  test_closures.rs  test_control_flow.rs  test_coroutines.rs  test_cross_feature.rs  test_debug_lib.rs  test_error_handling.rs  test_functions.rs  test_gc.rs  test_generic_for.rs  test_io_lib.rs  test_literals.rs  test_load_exec.rs  test_lua54_conformance.rs  test_math_lib.rs  test_metamethods.rs  test_number_semantics.rs  test_os_lib.rs  test_package_lib.rs  (+12 more)
crates/selune/src/: lib.rs  main.rs
docs/: PERFORMANCE.md  architecture.md  phase1-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs
scripts/: run_puc_547.sh
selune/: Cargo.toml
selune/src/: main.rs  opcode.rs  value.rs  vm.rs
tests/lua54-tests/: ORIGIN.md  closure.lua  constructs.lua  coroutine.lua  db.lua  errors.lua  gc.lua  literals.lua  locals.lua  nextvar.lua  pm.lua  run_test.lua  sort.lua  strings.lua
tests/lua_samples/: attributes.lua  closures.lua  comprehensive.lua  control_flow.lua  factorial.lua  fibonacci.lua  goto.lua  sieve.lua  tables.lua  varargs.lua
