[workspace]
resolver = "2"
members = [
    "crates/selune-core",
    "crates/selune-compiler",
    "crates/selune-vm",
    "crates/selune-jit",
    "crates/selune-stdlib",
    "crates/selune-ffi",
    "crates/selune",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jiaminc-cmu/Selune"

[workspace.dependencies]
selune-core = { path = "crates/selune-core" }
selune-compiler = { path = "crates/selune-compiler" }
selune-vm = { path = "crates/selune-vm" }
selune-jit = { path = "crates/selune-jit" }
selune-stdlib = { path = "crates/selune-stdlib" }
selune-ffi = { path = "crates/selune-ffi" }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
indexmap = "2"
cranelift-codegen = "0.129"
cranelift-frontend = "0.129"
cranelift-module = "0.129"
cranelift-jit = "0.129"
cranelift-native = "0.129"
target-lexicon = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
